<resources
    xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Manage birthdays</string>
    <string name="activity_main_label">Overview</string>
    <string name="activity_info_label">Information</string>
    <string name="activity_input_label">Add/Edit</string>
    <string name="activity_notifications_label">Notifications</string>
    <string name="activity_settings_label">Settings</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="ignore_year">Ignore Year</string>
    <string name="others">Others</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="in_x_days" tools:ignore="PluralsCandidate">In %1$d days</string>
    <string name="xth_birthday">%1$s (%2$d)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="allow">Allow</string>
    <string name="rate_app">Rate app</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="activity_main_nothing_to_show">No entries available.</string>
    <string name="activity_input_day_hint">dd</string>
    <string name="activity_input_month_hint">mm</string>
    <string name="activity_input_year_hint">yyyy</string>
    <string name="sure_delete_title">Confirm deletion</string>
    <string name="sure_delete_text">Do you really want to remove this birthday?</string>
    <string name="wrong_input_title">Wrong input</string>
    <string name="wrong_input_no_name">You did not specify a name.</string>
    <string name="wrong_input_birthday">You specified an invalid birthday or none.</string>
    <string name="failure_loading_data_title">Problem</string>
    <string name="failure_loading_data_text">There has been a problem loading data. Please restart the application.</string>
    <string name="maximum_data_achieved_title">Maximum amount reached</string>
    <string name="maximum_data_achieved_text">You reached the maximum amount for birthdays (%1$d). Before adding a new birthday, you need to remove another one.</string>
    <string name="rating_title">Rate this app</string>
    <string name="rating_text">If you like this app, rate it in the Google Play Store!</string>
    <string name="import_export_dialog_title">Import/Export</string>
    <string name="import_export_dialog_text" tools:ignore="PluralsCandidate">
        You can export all entered birthdays into a file. This file will be saved in the primary smartphone storage and is not going to be encoded. The risk that comes from this, especially regarding data protection, is entirely up to you.
        \n\nIf you want to import birthdays from such a file, note that they will be added to the birthdays saved currently in the app. If the amount of birthdays from both sources exceeds the maximum amount of %1$d, the import is not possible.
    </string>
    <string name="import_export_import">Import</string>
    <string name="import_export_export">Export</string>
    <string name="import_export_failed_title">Problem with import/export</string>
    <string name="import_export_failed_text">There was a problem importing or exporting.</string>
    <string name="import_export_storage_error_title">Storage problem</string>
    <string name="import_export_storage_error_text">There was a problem with the availability of the storage.</string>
    <string name="import_export_permissions_fail_title">Missing permissions</string>
    <string name="import_export_permissions_fail_text">Without the missing permission, the app can not access the external storage. For a successful import or export, please allow the app access.</string>
    <string name="import_export_export_successful_title">Export successful</string>
    <string name="import_export_export_successful_text">The saved data was exported successfully. The file is located at: %1$s</string>
    <string name="import_export_import_successfull_title">Import successful</string>
    <string name="import_export_import_successfull_text">The file was imported successfully and the birthdays were added to the app.</string>
    <string name="export_failed_title">Export failed</string>
    <string name="export_failed_text">The export failed due to the following reason:\n\n%s</string>
    <string name="no_data_to_export">No data to export</string>
    <string name="no_storage_available">No storage available</string>
    <string name="unable_to_create_directory">Unable to create directory</string>
    <string name="import_export_maximum_data_size_title">Maximum amount exceeded</string>
    <string name="import_export_maximum_data_size_text">The amount of saved and imported birthdays exceed the maximum amount of %1$d. To import the file successfully, remove one or more saved birthdays.</string>
    <string name="set_alarm_permissions_explanation_title">Please activate permission</string>
    <string name="set_alarm_permissions_explanation_text">To notify you about birthdays, the app needs permission to set alarms. If you deny this, the app can not notify you.</string>
    <string name="save_failed_title">Saving data failed</string>
    <string name="save_failed_text">Saving data failed due to the following reason:\n\n%s</string>
    <string name="no_first_name_specified">No first name specified.</string>
    <string name="invalid_date">Invalid date specified.</string>
    <string name="delete_failed_title">Deleting data failed</string>
    <string name="delete_failed_text">Deleting data failed due to the following reason:\n\n%s</string>
    <string name="no_id_to_delete">No data found to delete.</string>
    <string name="loading_failed_title">Loading data failed</string>
    <string name="loading_failed_text">Loading data failed due to the following reason:\n\n%s</string>
    <string name="content_title">Birthday reminder</string>
    <string name="content_text">%1$s, it\'s %2$s\'s birthday</string>
    <string name="content_text_name_ending_with_s">%1$s, it\'s %2$s\' birthday</string>
    <string name="notification_channel_id" tools:ignore="MissingTranslation">BIRTHDAY_NOTIFICATIONS</string>
    <string name="notification_channel_name">Birthday notifications</string>
    <string name="menu_title_delete">Delete</string>
    <string name="menu_title_save">Save</string>
    <string name="menu_title_info">Information</string>
    <string name="menu_title_notifications">Notifications</string>
    <string name="menu_title_import_export">Import/Export</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_add">Add birthday</string>
    <string name="menu_title_sort">Sort</string>
    <string name="menu_title_sort_next">Next birthday</string>
    <string name="menu_title_sort_calendric">Calendric</string>
    <string name="menu_title_sort_lexicographic">Lexicographic</string>
    <string name="menu_title_sort_age">Age</string>
    <string name="activity_notifications_active">Activate notifications?</string>
    <string-array name="activity_notifications_settings">
        <item>On birthday at %1$s</item>
        <item>One day before birthday at %1$s</item>
        <item>%1$d days before birthday at %2$s</item>
    </string-array>
    <string name="activity_notifications_x_days_before_without_time" tools:ignore="PluralsCandidate">%1$d days before birthday</string>
    <string name="activity_notifications_time_picker_title">Choose time</string>
    <string name="activity_notifications_date_picker_title">Choose days</string>
    <string name="info_about_version">Version: %1$s</string>
    <string name="info_about_title">Information about this app</string>
    <string name="info_about_text">If the storage of this app gets deleted, all data is lost and the app may behave incorrect.
        \n\nThe app needs the permission \"set alarm\" and \"execute after boot completed\" to create correct notifications.
        \n\nThe app needs the permission \"change or delete external storage\" and \"read external storage\" to import or export data when you want it. The app will never do this automatically.
        \n\nNo responsibility will be accepted if the app displays notifications incorrectly or not.
        \n\nThe module for choosing a file to import is available by <a href="http://choosealicense.com/licenses/apache-2.0/">Apache 2.0 License</a> and published at <a href="https://github.com/nbsp-team/MaterialFilePicker">Github</a>. Copyright for this module: <a href="https://github.com/nbsp-team">nbsp-team</a>.
        \n\nThe code of this app is licensed with <a href="http://choosealicense.com/licenses/mit/">MIT-License</a> and published on <a href="https://github.com/SebastianOltmanns/birthdays">GitHub</a>.
    </string>
    <string name="info_motivation_title">What\'s the purpose of this app?</string>
    <string name="info_motivation_text" tools:ignore="PluralsCandidate">
        I developed this app to be more independent from other services. I realized that I do not want to forget my roommate\'s birthday just because he deleted his account in a certain social network, which would otherwise have indicated his birthday.
        \nFurthermore I wanted a simple service, no integrated calendar services that for the most part have additional features I do not use. And I wanted a service that by no means passes on data to third parties or transfers data over the Internet.
        \n\nThis app is really simple, limited to %1$d entries and does not have the possibility to access the Internet. Everything is storaged on your smartphone.
    </string>
    <string name="info_notification_title">The app does not notify me. Why?</string>
    <string name="info_notification_text_introduction">In some cases the app does not create a notification for you. There is a range of different possible reasons and solutions for this problem:</string>
    <string name="info_notification_text_permissions">Make sure that the application has all the needed permissions to create alarms and notifications. To check that, open the Settings, navigate to Applications/Application Manager, open the settings for this particular app and check the permissions.</string>
    <string name="info_notification_text_settings">For this app to even try to create notifications, notifications must be set to active in the notification settings of this app. To do that, open the notification settings in the menu in the upper right corner in the overview screen of this app.</string>
    <string name="info_notification_text_energy">It may be that the alarms and notifications do not work while your smartphone is idle, in power-saving mode, or something similar. To review that, check the power saving options and the notification options in the Settings of your smartphone.</string>
    <string name="info_notification_text_update">Since there are regular updates to this app and to the Android Operating System, you should always make sure to have the newest version of this app and the Android Operating System installed.</string>
    <string name="info_notification_text_restart">You can restart your smartphone. After that, all the alarms get recreated.</string>
    <string name="info_notification_text_otherwise">If all these suggestions do not solve the issue, then unfortunately I can not help you. I am trying everything to eliminate other reasons that may be responsible for this issue. Please consider not to rate this app bad just because the notifications do not appear. However, I am very happy if you provide me with constructive critic.</string>
    <string name="info_about_developer_title">Information about the developer</string>
    <string name="info_about_developer_text">This app is being developed by Sebastian Oltmanns. For contact, please use sebastian.oltmanns.developer@gmail.com.</string>
</resources>