<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_info"
        android:icon="@drawable/ic_info_outline"
        android:title="@string/menu_title_info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/menu_title_notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_add"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_title_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_import_export"
        android:icon="@drawable/ic_import_export"
        android:title="@string/menu_title_import_export"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_rate"
        android:icon="@drawable/ic_thumb_up"
        android:title="@string/rate_app"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_title_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_sort"
        android:title="@string/menu_title_sort"
        app:showAsAction="never" >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/main_sort_next"
                    android:title="@string/menu_title_sort_next"
                    android:checked="true" />
                <item
                    android:id="@+id/main_sort_calendric"
                    android:title="@string/menu_title_sort_calendric" />
                <item
                    android:id="@+id/main_sort_lexicographic"
                    android:title="@string/menu_title_sort_lexicographic" />
                <item
                    android:id="@+id/main_sort_age"
                    android:title="@string/menu_title_sort_age" />
            </group>
        </menu>
    </item>


</menu>