<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.InfoActivity"
    tools:showIn="@layout/activity_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_gap"
            android:text="@string/info_about_title"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/info_about_text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_gap"
            android:text="@string/info_motivation_title"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/info_motivation_text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_gap"
            android:text="@string/info_about_developer_title"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:autoLink="web|email"
            android:text="@string/info_about_developer_text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/information_activity_privacy_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_gap"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/information_activity_privacy_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"/>

    </LinearLayout>
</ScrollView>
