<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="4">

        <TextView
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical"
            android:text="@string/birthday"
            android:textColor="@color/text_color"
            />

        <LinearLayout
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_input_birthday_day"
                android:ems="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLength="2"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size"
                android:nextFocusForward="@+id/text_input_birthday_month"
                android:nextFocusDown="@+id/text_input_birthday_month"
                android:hint="@string/activity_input_day_hint"
                >
                <requestFocus />
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="."
                android:textColor="@color/text_color"/>
            <EditText
                android:id="@+id/text_input_birthday_month"
                android:ems="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLength="2"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size"
                android:nextFocusForward="@+id/text_input_birthday_year"
                android:nextFocusDown="@+id/text_input_birthday_year"
                android:hint="@string/activity_input_month_hint"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="."
                android:textColor="@color/text_color"/>
            <EditText
                android:id="@+id/text_input_birthday_year"
                android:ems="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLength="4"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size"
                android:hint="@string/activity_input_year_hint"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_gap"
                android:layout_marginStart="@dimen/text_gap"
                android:background="@drawable/rounded_corners_button"
                android:padding="@dimen/rounded_button_corner_radius"
                android:onClick="changeBirthday"
                android:src="@drawable/ic_event" />


        </LinearLayout>

        <TextView
            android:layout_gravity="center_vertical"
            android:text="@string/first_name"
            android:textColor="@color/text_color"/>

        <EditText
            android:id="@+id/text_input_firstname"
            android:maxEms="25"
            android:minEms="15"
            android:layout_gravity="fill_horizontal"
            android:layout_width="0dp"
            android:lines="1"
            android:inputType="textCapWords"
            android:maxLength="25"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/text_color"/>

        <EditText
            android:id="@+id/text_input_lastname"
            android:maxEms="25"
            android:minEms="15"
            android:layout_gravity="fill_horizontal"
            android:layout_width="0dp"
            android:lines="1"
            android:inputType="textCapWords"
            android:maxLength="25"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textColor="@color/text_color"/>


        <EditText
            android:id="@+id/text_input_others"
            android:maxEms="25"
            android:minEms="15"
            android:layout_gravity="fill_horizontal"
            android:layout_width="0dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLength="200"
            android:scrollbars="vertical"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"/>


    </GridLayout>
</ScrollView>